增加了一些代码

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = ststm32
 board = genericSTM32F103ZE
 framework = arduino
 upload_protocol = serial
-upload_port = COM36
+upload_port = COM6
 extra_scripts = 
 	$PROJECT_DIR/lib/Script_Files/STM32_Build_HEX_File_Script.py
 	$PROJECT_DIR/lib/Script_Files/STM32_Serial_Download_Script.py
@@ -28,3 +28,11 @@ build_flags =
 	-D HSE_VALUE=8000000U
 	-g
 	-Wl,-u,_printf_float
+debug_tool = jlink
+
+
+[env:STM32F103ZE_Jlink_Debug]
+platform = ststm32
+board = genericSTM32F103ZE
+framework = arduino
+debug_tool = jlink
