实现任务不重复切换状态

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,16 @@ platform = ststm32
 board = genericSTM32F103ZE
 framework = arduino
 upload_protocol = serial
-upload_port = COM6
+upload_port = COM42
 extra_scripts = 
 	$PROJECT_DIR/lib/Script_Files/STM32_Build_HEX_File_Script.py
 	$PROJECT_DIR/lib/Script_Files/STM32_Serial_Download_Script.py
 lib_deps = 
 	khoih-prog/STM32_TimerInterrupt@^1.3.0
 	stm32duino/STM32duino FreeRTOS@^10.3.2
+	olikraus/U8g2@^2.35.4
+	janelia-arduino/TMC2209@^9.0.3
+	paolop74/extEEPROM@^3.4.1
 build_flags = 
 	-D MCU_STM32F103ZE
 	-D SERIAL_UART_INSTANCE=1
@@ -30,9 +33,15 @@ build_flags =
 	-Wl,-u,_printf_float
 debug_tool = jlink
 
-
 [env:STM32F103ZE_Jlink_Debug]
 platform = ststm32
 board = genericSTM32F103ZE
 framework = arduino
 debug_tool = jlink
+upload_protocol = jlink
+lib_deps = 
+	khoih-prog/STM32_TimerInterrupt@^1.3.0
+	stm32duino/STM32duino FreeRTOS@^10.3.2
+	olikraus/U8g2@^2.35.4
+	janelia-arduino/TMC2209@^9.0.3
+	paolop74/extEEPROM@^3.4.1
